--- a/portfolio.css
+++ b/portfolio.css
@@ -130,6 +130,7 @@ margin-left: -40px;
             "wdth" 100;
             margin-top: 43px;
             text-align: center;
+          font-size: 40px
         }
         #projects > .images{
           display: flex;
